--- a/scss/base/_globals.scss
+++ b/scss/base/_globals.scss
@@ -8,7 +8,7 @@
     align-items: center;
     flex-direction: column;
     width: 135px;
-    font: 20px $roboto;
+    font: 40px $roboto;
     color: $grey;
     width: auto;
     margin-bottom: 35px;
